<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/movie_settings">

    <com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory
        android:title="@string/sorting_and_filters">
        <ListPreference
            android:defaultValue="@string/preference_sort_popular"
            android:entries="@array/preference_sort_options"
            android:entryValues="@array/preference_sort_values"
            android:key="@string/preference_sort_key"
            android:title="@string/preference_sort_label" />
        <ListPreference
            android:defaultValue="@string/preference_sort_language_eng"
            android:entries="@array/preference_sort_language_options"
            android:entryValues="@array/preference_sort_language_values"
            android:key="@string/preference_sort_language_key"
            android:title="@string/preference_sort_language_label" />
    </com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory>
    <com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory
        android:title="Release Date Filter">
        <EditTextPreference
            android:defaultValue="@string/preference_year_default"
            android:key="@string/preference_year_key"
            android:title="Filter By Year"
            android:inputType="number"/>
    </com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory>
    <com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory
        android:title="Clear All Settings and Filters">
        <Preference
            android:key="clear_settings"
            android:title="Clear All Settings"/>
    </com.thebaileybrew.ultimateflix.ui.CustomPreferenceCategory>

</PreferenceScreen>