<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryFade">
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryFade">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_horizontal_8dp"
            android:paddingEnd="@dimen/margin_horizontal_8dp"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/search_movies">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/text_default24sp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorWhite"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/movie_card_view"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_connection_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <ImageView
            android:id="@+id/internet_out_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/flix_logo"
            android:alpha="0.25"
            android:scaleType="centerCrop"
            android:contentDescription="@string/no_internet_meme_image" />
        <TextView
            android:id="@+id/internet_out_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/large_margin_horizontal_32dp"
            android:layout_marginRight="@dimen/large_margin_horizontal_32dp"
            android:textSize="@dimen/text_default28sp"
            tools:text="Thanos has found your internet connectivity expendable"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/internet_out_message"
            android:layout_marginTop="@dimen/margin_vertical_8dp"
            android:layout_marginLeft="@dimen/large_margin_horizontal_32dp"
            android:layout_marginRight="@dimen/large_margin_horizontal_32dp"
            android:textSize="@dimen/text_default24sp"
            android:text="@string/refresh_network"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>